# bun-docs-mcp-proxy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  PKGBUILD  README.md  Taskfile.yml  package.json  taskfile.yml
.config/: nextest.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  TESTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  integration-tests.yml  pages.yml  release.yml
.zed/: tasks.json
npm/: .npmignore  README.md  package.json
npm/scripts/: install.js
scripts/: fetch-docs.rs  fetch-docs.ts
src/: http.rs  main.rs  main_tests.rs  protocol.rs  transport.rs
src/http/: mod.rs  tests.rs
src/protocol/: mod.rs  tests.rs
src/transport/: mod.rs  tests.rs
tests/: cli_args.rs  cli_integration.rs  http_edge_cases.rs  integration_test.rs
