[package]
name = "bun-docs-mcp-proxy"
version = "0.2.1"
edition = "2024"
description = "MCP proxy for Bun documentation search"
repository = "https://github.com/kjanat/bun-docs-mcp-proxy"
license = "MIT"
keywords = ["bun", "documentation", "mcp", "protocol", "proxy"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1.0.100"
bytes = "1.9"
clap = { version = "4.5.51", features = ["derive"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", default-features = false, features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.1.1"
mockito = "1.7.0"
predicates = "3.1.3"
tempfile = "3.23.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
# Allow multiple versions for dev-dependencies (mockito/tempfile use newer getrandom than ring)
multiple_crate_versions = "allow"
# nursery = "warn"
pedantic = { level = "warn", priority = -1 }
# restriction = "warn"

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Remove debug symbols
lto = true  # Link-time optimization
panic = "abort"  # Smaller binary
codegen-units = 1  # Better optimization
