[package]
name = "bun-docs-mcp-proxy"
version = "0.3.0"
edition = "2024"
description = "MCP proxy for Bun documentation search"
repository = "https://github.com/kjanat/bun-docs-mcp-proxy"
license = "MIT"
keywords = ["bun", "documentation", "mcp", "protocol", "proxy"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3"

[features]
default = []
# Enable integration tests that make real API calls to bun.com
# These are disabled by default for faster CI runs
integration-tests = []

[lints.clippy]
# Individual restriction lints (blanket restriction group is forbidden by clippy)
# Note: Using "allow" for overly pedantic lints that fight idiomatic Rust
absolute_paths = "allow"  # Too noisy, blocks std::path::Path etc
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "allow"  # Too pedantic for idx + 1
as_conversions = "allow"  # Sometimes necessary
cargo = { level = "warn", priority = -1 }
decimal_literal_representation = "allow"
default_numeric_fallback = "allow"  # json!(1) is fine
expect_used = "allow"  # Better than unwrap with message
implicit_return = "allow"  # Idiomatic Rust uses implicit returns
indexing_slicing = "allow"  # Common pattern, tests especially
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
min_ident_chars = "allow"  # |e| is fine in closures
missing_docs_in_private_items = "allow"  # Too verbose for private items
mod_module_files = "warn"  # Keep this - prefer single-file modules
# Allow multiple versions for dev-dependencies (mockito/tempfile use newer getrandom than ring)
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pattern_type_mismatch = "allow"
pedantic = { level = "warn", priority = -1 }
print_stderr = "allow"  # CLI tool needs output
print_stdout = "allow"  # CLI tool needs output
question_mark_used = "allow"  # Idiomatic error handling
shadow_reuse = "allow"  # let line = line.trim() is fine
shadow_unrelated = "warn"  # But warn on unrelated shadowing
single_call_fn = "allow"  # Helper functions improve readability
single_char_lifetime_names = "warn"
string_slice = "allow"  # Common pattern when UTF-8 safe
tests_outside_test_module = "allow"  # Tests in tests/ are fine
unseparated_literal_suffix = "warn"
unwrap_used = "allow"  # Tests can unwrap

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Remove debug symbols
lto = true  # Link-time optimization
panic = "abort"  # Smaller binary
codegen-units = 1  # Better optimization
